--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
   width: 100%;
-  height: 20vh;
+  height: auto;
   padding: 2rem;
   display: flex;
   flex-direction: column;
