--- a/src/NavBar/navBar.css
+++ b/src/NavBar/navBar.css
@@ -27,9 +27,13 @@
   border: none;
   cursor: pointer;
   outline: none;
+  position: relative;
 }
 
 .nav-icon {
+  position: relative;
+  top: 2px;
+  left: 6px;
   font-size: 1.5rem;
   color: var(--primaryColor);
 }
