--- a/src/Recipe/RecipeCard.css
+++ b/src/Recipe/RecipeCard.css
@@ -1,12 +1,12 @@
-.featured-recipes-center h4 {
+.featured-recipes-center h2 {
   font-size: 1.25rem;
   margin-bottom: 0;
 }
 
 .featured-recipes-center span {
-  font-size: 10px;
+  font-size: 12px;
   position: relative;
-  top: -.5em
+  top: -.2em
 }
 
 .featured-recipes-center a {
@@ -20,11 +20,11 @@
 .btn-card {
   display: inline-block;
   margin-top: 1rem;
-  font-size: 10px;
+  font-size: 12px;
   text-decoration: none;
   letter-spacing: var(--mainSpacing);
-  background: var(--mainWhite);
-  color: var(--primaryColor);
+  background: var(--primaryColor);
+  color: black;
   padding: 0.4rem 0.9rem;
   border: 2px solid var(--primaryColor);
   transition: var(--mainTransition);
@@ -36,6 +36,5 @@
 
 .btn-card:hover {
   background: transparent;
-  border: 2px solid var(--mainGreen);
-  color: var(--mainGreen);
+  color: var(--primaryColor);
 }
